@@ -1,5 +1,6 @@
 2007.284: 1.3
 	- Update to libmseed 2.1.4.
+	- Change src/Makefile so user defined CFLAGS are used if set.
 
 2006.208: 1.2
 	- Update to libmseed 1.8.
